profilelist1exp/unpackaged/objects/Customer_Reference_Status_Parent__c.object
<CustomObject>
    <description>Created for CR12398 - Story 204368:RTB: CRMT: Customer Reference Status Object create fields.</description>
    <fields>
        <fullName>Approved_Denied_Account_Count__c</fullName>
        <description>Created for CR 12398 CRMT.</description>
        <label>Approved/Denied Account Count</label>
        <summaryFilterItems>
            <field>Customer_Reference_Status__c.Request_Ref_Status__c</field>
            <operation>equals</operation>
            <value>Approved, Denied</value>
        </summaryFilterItems>
        <summaryForeignKey>Customer_Reference_Status__c.Customer_Reference_Status_Parent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>How_Many_References__c</fullName>
        <description>Created for CR 12398 CRMT.</description>
        <label>How Many References</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Created for CR 12398 CRMT.</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Reference Status Parents</relationshipLabel>
        <relationshipName>Customer_Reference_Status_Parents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <description>Created for CR 12398 CRMT.</description>
        <formula>IF(Requested_Account_Count__c =  Approved_Denied_Account_Count__c, 
&apos;Closed&apos;, 
&apos;Open&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Created for CR 12398 CRMT.</description>
        <label>Request Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Account_Count__c</fullName>
        <description>Created for CR 12398 CRMT.</description>
        <label>Requested Account Count</label>
        <summaryForeignKey>Customer_Reference_Status__c.Customer_Reference_Status_Parent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR 12398 CRMT.</description>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Reference_Status_Parents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_By_Date__c</fullName>
        <description>Created for CR 12398 CRMT.</description>
        <label>Required By Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Customer Reference Status Parent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRMT {0000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Reference Status Parents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>